host-PID-IPC-namespaces/negative-test-case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-host-namespace-disallowed
  labels:
    app: alpine-host-namespace
spec:
  hostPID: true
  hostIPC: true
  containers:
  - name: alpine
    image: alpine:3.13.7
    command:
      - /bin/sh
      - "-c"
      - "sleep 60m"
    resources:
      limits:
        cpu: "100m"
        memory: "500Mi"
